--- a/Web Assembly/Game Of Life/WebAsm/Makefile
+++ b/Web Assembly/Game Of Life/WebAsm/Makefile
@@ -3,11 +3,11 @@ console:
 	gcc -o gameoflife.exe gameoflife.c
 	ls -la
 webasm:
-	emcc gameoflife.c -O2 -s WASM=1 -o gameoflife.html --shell-file gameoflife_template.html
+	emcc -O3 -s WASM=1 -s MODULARIZE=1 \
+		*.c -o gameoflife.js
 	ls -la
 clean:
 	rm -rf gameoflife.exe
 	rm -rf gameoflife.wasm
-	rm -rf gameoflife.html
 	rm -rf gameoflife.js
 	ls -la
